# neat-translator

./: Cargo.toml  README.md  README_en.md  build-android.sh
crates/backends/: Cargo.toml
crates/backends/src/: ai_interact.rs  cache.rs  error.rs  lib.rs  storage.rs
crates/backends/src/ai_interface/: deepseek.rs  mod.rs  qwen.rs
crates/backends/src/dict_interface/: mod.rs
crates/backends/src/utils/: config_path.rs  mod.rs
crates/gtk4-interface/: Cargo.toml
crates/gtk4-interface/src/: lib.rs
crates/gtk4-interface/src/custom_pages/: mod.rs  nt_application.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/slint-interface/: Cargo.toml  build.rs
crates/slint-interface/src/: lib.rs  main.rs  slint_interface.rs
crates/slint-interface/ui/: about.slint  hint.slint  settings.slint  test.slint  ui.slint
