[workspace]
resolver = "2"
members = [
    "crates/backends",
    "crates/gtk4-interface",
    "crates/launcher",
    "crates/slint-interface",
]
default = "crates/launcher"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A neat translator using APIs from Youdao and AI providers."

[profile.release]
# lto = "thin"
codegen-units = 16
debug = "line-tables-only"

[profile.best]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = 0


[profile.minsize]
inherits = "release"
opt-level = "z"
panic = "abort"
lto = "fat"
codegen-units = 1
debug = 0
