[workspace]
resolver = "2"
members = ["crates/backends", "crates/gtk4-interface", "crates/slint-interface"]
default = ["crates/slint-interface"]
exclude = ["crates/launcher"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A neat translator using APIs from Youdao and AI providers."

[profile.release]
# lto = "thin"
codegen-units = 16
debug = "line-tables-only"

[profile.best]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = 0


[profile.minsize]
inherits = "release"
opt-level = "z"
panic = "abort"
lto = "fat"
codegen-units = 1
debug = 0

[workspace.dependencies]
env_logger = "0.11.7"
log = "0.4.26"
anyhow = { version = "1.0.98", features = ["backtrace"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
