[package]
name = "backends"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
openai-api-rs = "6.0.4"
anyhow = { version = "1.0.98", features = ["backtrace"] }
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
toml = "0.8"
serde_json = "1.0"
log = "0.4.26"
