[package]
name = "backends"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
openai-api-rs = "6.0.4"
anyhow = { version = "1.0.98", features = ["backtrace"] }
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
toml = "0.8"
serde_json = "1.0"
log = "0.4.26"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android-activity = { version = "0.4", features = ["native-activity"] }
ndk-context = "0.1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
