[package]
name = "backends"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
# openai-api-rs = "6.0.4"
anyhow.workspace = true
strum = { version = "0.27", features = ["derive"] }
reqwest.workspace = true
serde.workspace = true
dirs = "6.0.0"
toml.workspace = true
serde_json.workspace = true
log.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android-activity = { version = "0.4", features = ["native-activity"] }
ndk-context = "0.1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
