[package]
name = "gtk4-interface"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
