[package]
name = "launcher"
version.workspace = true
edition.workspace = true
description.workspace = true

[[bin]]
name = "neat-translator"
path = "src/main.rs"

[dependencies]
log = "0.4.26"
env_logger = "0.11.7"

slint-interface = { path = "../slint-interface" }
backends = { path = "../backends" }
