[package]
name = "launcher"
version.workspace = true
edition.workspace = true
description.workspace = true

[[bin]]
name = "neat-translator"
path = "src/main.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true

slint-interface = { path = "../slint-interface" }
backends = { path = "../backends" }
